Navbar hamburger issue fixed

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-	{{ qs.title }}
-	<p>{{ qs.content }}</p>
+	{{ post.title }}
+	<p>{{ post.content }}</p>
 {% endblock content %}
