--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -1,5 +1,5 @@
 {% extends "blog/base.html" %}
-<!-- {% load crispy_forms_tags %} -->
+{% load crispy_forms_tags %}
 {% block content %}
 
 <div>
@@ -7,10 +7,10 @@
 		{% csrf_token %}
 		<fieldset class="form-group">
 			<legend class="border-bottom mb-4">New post</legend>
-			{{ form.as_p }}
+			{{ form | crispy }}
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit">Submit</button>
+			<button class="btn btn-outline-dark" type="submit">Submit</button>
 		</div>
 	</form>
 	
