--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,6 +28,7 @@
 		        </div>
 		        <!-- Navbar Right Side -->
 		        <div class="navbar-nav">
+                    <a class="nav-item nav-link " href="{% url 'new-post' %}">New post</a>
 			        <a class="nav-item nav-link " href="#">Login</a>
 			        <a class="nav-item nav-link " href="#">Register</a>
 		        </div>
@@ -38,24 +39,14 @@
     
     <div class="container">
       <div class="row">
-        <div class="col-3">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col">
+          
         </div>
-        <div class="col-12">
+        <div class="col-8">
           {% block content %}{% endblock %}
         </div>
-        <div class="col-3">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col">
+          
         </div>
       </div>
           </div>
