--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-	{{ post.title }}
+	<h1>{{ post.title }}</h1>
 	<p>{{ post.content }}</p>
 {% endblock content %}
