--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,7 +30,7 @@
 		        <div class="navbar-nav">
                     <a class="nav-item nav-link " href="{% url 'new-post' %}">New post</a>
 			        <a class="nav-item nav-link " href="#">Login</a>
-			        <a class="nav-item nav-link " href="#">Register</a>
+			        <a class="nav-item nav-link " href="{% url 'register' %}">Register</a>
 		        </div>
 	      		</div>
 			</div>
