--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,8 +1,12 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 	<form method="POST">
 		{% csrf_token %}
-		{{ form.as_p }}
+		<h2>Register Today!</h2>
+		<hr>
+		{{ form | crispy }}
 		<div class="form-group">
 			<button class="btn btn-outline-dark" type="submit">Submit</button>
 		</div>
