--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,7 +1,8 @@
 {% extends "blog/base.html" %}
 {% block content %}
 
-<p>logged out!</p>
+<p>You have been logged out sucessfully!</p>
+<p>Click here to <a href="{% url 'login' %}">login</a></p>
 
 
 {% endblock content %}
