--- a/blog/static/blog/base.css
+++ b/blog/static/blog/base.css
@@ -24,6 +24,7 @@ body {
 	border: 1px solid #bdbdbd;
 	padding-top: 10px;
 	padding-left: 25px;
+	padding-right: 25px;
 	padding-bottom: 10px; 
 	
 }
