--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,6 @@
 {% extends "blog/base.html" %}
 {% load static %}
+{% load humanize %}
 {% block content %}
 	<div class="want-to-write-something">
 		<p>Have something in mind? <a href="{% url 'new-post' %}">Write here!</a></p>
@@ -7,11 +8,11 @@
 	<p>{{ request.user }}</p>
 	<div class="blog-section">
 		{% for post in objects %}
-			<!-- <a href="{% url 'post-detail' post.slug %}">{{ post.title }}</a> -->
+			<a href="{% url 'post-detail' post.slug %}">{{ post.title }}</a><p> by {{ post.author }} on {{ post.date_posted | timesince }}</p>
 			<div class="media">
 			  <img class="profile-pic" src="{{ post.author.profile.profile_pic.url }}">
 			  <div class="media-body">
-			    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+			    <p>{{ post.content }}</p>
 			  </div>
 			</div>
 			<hr>
