--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,23 +5,24 @@
 	<div class="want-to-write-something">
 		<p>Have something in mind? <a href="{% url 'new-post' %}">Write here!</a></p>
 	</div>
-	<p>{{ request.user }}</p>
-		{% for post in objects %}
-			<div class="blog-section mb-3">
-				<div class="media">
-				  <img class="profile-pic" src="{{ post.author.profile.profile_pic.url }}">
-				  <div class="media-body">
-				  	{{ post.author }}
-				  	<br>
-				  	<small>{{ post.date_posted | naturaltime }}</small>
-				  </div> 
-				</div>
-				<hr>
-				<div>
-					<h3><a href="{% url 'post-detail' post.slug %}">{{ post.title }}</a><br></h3>
-					<p>{{ post.content }}</p>
-				</div>
+	{% for post in objects %}
+		<div class="blog-section mb-3">
+			<div class="media">
+			  <img class="profile-pic" src="{{ post.author.profile.profile_pic.url }}">
+			  <div class="media-body">
+			  	<strong>{{ post.author }}</strong>
+			  	<br>
+			  	<small class="text-muted">{{ post.date_posted | naturaltime }}</small>
+			  </div> 
 			</div>
+			<hr>
+			<div class="blog-title">
+				<h5><a href="{% url 'post-detail' post.slug %}" style="color: #3b3b3b">{{ post.title }}</a></h5>
+			</div>
+			<div class="blog-content text-muted">
+				<p>{{ post.content | linebreaks }}</p>
+			</div>
+		</div>
 		{% endfor %}
 	
 		
