--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,6 +31,7 @@
               {% if user.is_authenticated %}
 
               <a class="nav-item nav-link " href="{% url 'new-post' %}">New post</a>
+              <a class="nav-item nav-link " href="{% url 'profile' request.user %}">Profile</a>
               <a class="nav-item nav-link " href="{% url 'logout' %}">Logout</a>
 
               {% else %}
