--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,29 +1,9 @@
 {% extends "blog/base.html" %}
 {% load static %}
-{% load humanize %}
 {% block content %}
 	<div class="want-to-write-something">
 		<p>Have something in mind? <a href="{% url 'new-post' %}">Write here!</a></p>
 	</div>
-	{% for post in objects %}
-		<div class="blog-section mb-3">
-			<div class="media">
-			  <img class="profile-pic" src="{{ post.author.profile.profile_pic.url }}">
-			  <div class="media-body">
-			  	<strong>{{ post.author }}</strong>
-			  	<br>
-			  	<small class="text-muted">{{ post.date_posted | naturaltime }}</small>
-			  </div> 
-			</div>
-			<hr>
-			<div class="blog-title">
-				<h5><a href="{% url 'post-detail' post.slug %}" style="color: #3b3b3b">{{ post.title }}</a></h5>
-			</div>
-			<div class="blog-content text-muted">
-				<p style="height: 4.5rem; line-height: 1.5rem; overflow: hidden;">{{ post.content }}</p>
-				<a href="{% url 'post-detail' post.slug %}">Read more</a>
-			</div>
-		</div>
-	{% endfor %}
+	{% include 'blog/post_list.html' %}
 	
 {% endblock content %}
