--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,7 +1,36 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-	<p>{{ profile.user }}</p>
-	<p>{{ profile.bio }}</p>
-	<img src="{{ profile.profile_pic.url }}">
+	<div class="media">
+		<img src="{{ profile.profile_pic.url }}" class="profile-page-pic">
+		<h3 class="ml-5 mt-5" >{{ profile.user }}</h3>
+	</div>
+	<div class="mt-3"><p>{{ profile.bio }}</p></div>
+	<br>
+	<button class="btn btn-outline-dark" type="submit">Follow</button>
+	{% if request.user == profile.user %}
+		<button class="btn btn-outline-dark float-right" type="submit">Edit profile</button>
+	{% endif %}
+	<br>
+	<br>
+
+	<ul class="nav nav-tabs mb-2" id="myTab" role="tablist">
+	  <li class="nav-item " role="presentation">
+	    <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true" style="color: #3b3b3b; border-top: 0px;">Posts</a>
+	  </li>
+	  <li class="nav-item" role="presentation">
+	    <a class="nav-link" id="followers-tab" data-toggle="tab" href="#followers" role="tab" aria-controls="followers" aria-selected="false" style="color: #3b3b3b">Followers</a>
+	  </li>
+	  <li class="nav-item" role="presentation">
+	    <a class="nav-link" id="following-tab" data-toggle="tab" href="#following" role="tab" aria-controls="following" aria-selected="false" style="color: #3b3b3b">Following</a>
+	  </li>
+	</ul>
+	<div class="tab-content" id="myTabContent">
+	  <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+	  	{% include 'blog/post_list.html' %}
+	  </div>
+	  <div class="tab-pane fade" id="followers" role="tabpanel" aria-labelledby="followers-tab">Followers</div>
+	  <div class="tab-pane fade" id="following" role="tabpanel" aria-labelledby="following-tab">Following</div>
+	</div>
 {% endblock content %}
+
