--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,11 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div class="blog-section mb-3">
 	<div class="media">
 		<img src="{{ profile.profile_pic.url }}" class="profile-page-pic">
 		<h3 class="ml-5 mt-5" >{{ profile.user }}</h3>
 	</div>
-	<div class="mt-3"><p>{{ profile.bio }}</p></div>
+	<div class="mt-3"><p><em>{{ profile.bio }}</em></p></div>
 	<br>
 	<button class="btn btn-outline-dark" type="submit">Follow</button>
 	{% if request.user == profile.user %}
@@ -13,16 +14,19 @@
 	{% endif %}
 	<br>
 	<br>
-
+</div>
 	<ul class="nav nav-tabs mb-2" id="myTab" role="tablist">
 	  <li class="nav-item " role="presentation">
-	    <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true" style="color: #3b3b3b; border-top: 0px;">Posts</a>
+	    <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true" style="color: #3b3b3b;">Posts ({{ posts.count }})</a>
 	  </li>
 	  <li class="nav-item" role="presentation">
 	    <a class="nav-link" id="followers-tab" data-toggle="tab" href="#followers" role="tab" aria-controls="followers" aria-selected="false" style="color: #3b3b3b">Followers</a>
 	  </li>
 	  <li class="nav-item" role="presentation">
 	    <a class="nav-link" id="following-tab" data-toggle="tab" href="#following" role="tab" aria-controls="following" aria-selected="false" style="color: #3b3b3b">Following</a>
+	  </li>
+	  <li class="nav-item" role="presentation">
+	    <a class="nav-link" id="likes-tab" data-toggle="tab" href="#likes" role="tab" aria-controls="likes" aria-selected="false" style="color: #3b3b3b">Likes</a>
 	  </li>
 	</ul>
 	<div class="tab-content" id="myTabContent">
@@ -31,6 +35,7 @@
 	  </div>
 	  <div class="tab-pane fade" id="followers" role="tabpanel" aria-labelledby="followers-tab">Followers</div>
 	  <div class="tab-pane fade" id="following" role="tabpanel" aria-labelledby="following-tab">Following</div>
+	  <div class="tab-pane fade" id="likes" role="tabpanel" aria-labelledby="likes-tab">Likes</div>
 	</div>
 {% endblock content %}
 
