--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -2,15 +2,21 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-	<form method="POST" enctype="multipart/form-data">
-		{% csrf_token %}
-		<fieldset class="form-group">
-			<legend class="border-bottom mb-4">Profile Info</legend>
-			{{ p_form.as_p }}
-		</fieldset>
-		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit">Update</button>
-		</div>
-	</form>
+	<div class="blog-section mb-3">
+
+		<legend class="border-bottom mb-4">Edit profile</legend>
+
+		{% include 'users/base_profile.html' %}
+
+		<form method="POST" enctype="multipart/form-data">
+			{% csrf_token %}
+			<fieldset class="form-group">
+				{{ p_form | crispy }}
+			</fieldset>
+			<div class="form-group">
+				<button class="btn btn-outline-dark" type="submit">Update</button>
+			</div>
+		</form>
+	</div>
 
 {% endblock content %}
