--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,12 +2,7 @@
 
 {% block content %}
 <div class="blog-section mb-3">
-	<div class="media">
-		<img src="{{ profile.profile_pic.url }}" class="profile-page-pic">
-		<h3 class="ml-5 mt-5" >{{ profile.user }}</h3>
-	</div>
-	<div class="mt-3"><p><em>{{ profile.bio }}</em></p></div>
-	<br>
+	{% include 'users/base_profile.html' %}
 	
 	{% if request.user != profile.user %}
 		<button class="btn btn-outline-dark" type="submit">Follow</button>
