--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
 		<div class="media">
 		  <img class="profile-pic" src="{{ post.author.profile.profile_pic.url }}">
 		  <div class="media-body">
-		  	<strong>{{ post.author }}</strong>
+		  	<a href="{% url 'profile' post.author %}" style="color: #3b3b3b"><strong>{{ post.author }}</strong></a>
 		  	<br>
 		  	<small class="text-muted">{{ post.date_posted | naturaltime }}</small>
 		  </div> 
