--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,41 +1,41 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<div class="blog-section mb-3">
-	{% include 'users/base_profile.html' %}
-	
-	{% if request.user != profile.user %}
-		<button class="btn btn-outline-dark" type="submit">Follow</button>
-	{% else %}
-		<form action="{% url 'edit-profile' %}">
-			<button class="btn btn-outline-dark float-right" type="submit">Edit profile</button>
-		</form>
-	{% endif %}
-	
-	<br>
-	<br>
-</div>
-	<ul class="nav nav-tabs mb-2" id="myTab" role="tablist">
-	  <li class="nav-item " role="presentation">
-	    <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true" style="color: #3b3b3b;">Posts ({{ posts.count }})</a>
+	<div class="blog-section mb-3">
+		{% include 'users/base_profile.html' %}
+		
+		{% if request.user != profile.user %}
+			<button class="btn btn-outline-dark" type="submit">Follow</button>
+		{% else %}
+			<form action="{% url 'edit-profile' %}">
+				<button class="btn btn-outline-dark float-right" type="submit">Edit profile</button>
+			</form>
+		{% endif %}
+		
+		<br>
+		<br>
+	</div>
+	<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+	  <li class="nav-item">
+	    <a class="nav-link active" id="pills-posts-tab" data-toggle="pill" href="#pills-posts" role="tab" aria-controls="pills-posts" aria-selected="true">Posts ({{ posts.count }})</a>
 	  </li>
-	  <li class="nav-item" role="presentation">
-	    <a class="nav-link" id="followers-tab" data-toggle="tab" href="#followers" role="tab" aria-controls="followers" aria-selected="false" style="color: #3b3b3b">Followers</a>
+	  <li class="nav-item">
+	    <a class="nav-link" id="pills-followers-tab" data-toggle="pill" href="#pills-followers" role="tab" aria-controls="pills-followers" aria-selected="false">Followers</a>
 	  </li>
-	  <li class="nav-item" role="presentation">
-	    <a class="nav-link" id="following-tab" data-toggle="tab" href="#following" role="tab" aria-controls="following" aria-selected="false" style="color: #3b3b3b">Following</a>
+	  <li class="nav-item">
+	    <a class="nav-link" id="pills-following-tab" data-toggle="pill" href="#pills-following" role="tab" aria-controls="pills-following" aria-selected="false">Following</a>
 	  </li>
-	  <li class="nav-item" role="presentation">
-	    <a class="nav-link" id="likes-tab" data-toggle="tab" href="#likes" role="tab" aria-controls="likes" aria-selected="false" style="color: #3b3b3b">Likes</a>
+	  <li class="nav-item">
+	    <a class="nav-link" id="pills-likes-tab" data-toggle="pill" href="#pills-likes" role="tab" aria-controls="pills-likes" aria-selected="false">Likes</a>
 	  </li>
 	</ul>
-	<div class="tab-content" id="myTabContent">
-	  <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+	<div class="tab-content" id="pills-tabContent">
+	  <div class="tab-pane fade show active" id="pills-posts" role="tabpanel" aria-labelledby="pills-posts-tab">
 	  	{% include 'blog/post_list.html' %}
 	  </div>
-	  <div class="tab-pane fade" id="followers" role="tabpanel" aria-labelledby="followers-tab">Followers</div>
-	  <div class="tab-pane fade" id="following" role="tabpanel" aria-labelledby="following-tab">Following</div>
-	  <div class="tab-pane fade" id="likes" role="tabpanel" aria-labelledby="likes-tab">Likes</div>
+	  <div class="tab-pane fade" id="pills-followers" role="tabpanel" aria-labelledby="pills-followers-tab">Followers</div>
+	  <div class="tab-pane fade" id="pills-following" role="tabpanel" aria-labelledby="pills-following-tab">Following</div>
+	  <div class="tab-pane fade" id="pills-likes" role="tabpanel" aria-labelledby="pills-likes-tab">Likes</div>
 	</div>
 {% endblock content %}
 
