--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,8 @@
 		<div class="media">
 		  <img class="profile-pic" src="{{ post.author.profile.profile_pic.url }}">
 		  <div class="media-body">
-		  	<a href="{% url 'profile' post.author %}" style="color: #3b3b3b"><strong>{{ post.author }}</strong></a>
+		  	<a href="{% url 'profile' post.author %}" style="color: #3b3b3b"><strong>{{ post.author }}</strong></a> 
+		  	{% include 'blog/add_bookmark.html' %}
 		  	<br>
 		  	<small class="text-muted">{{ post.date_posted | naturaltime }}</small>
 		  </div> 
@@ -19,6 +20,7 @@
 		<div class="blog-content text-muted">
 			<p>{{ post.content | linebreaks }}</p>
 		</div>
+		
 	</div>
 	
 {% endblock content %}
