Implemented like feature

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,6 +20,9 @@
 		<div class="blog-content text-muted">
 			<p>{{ post.content | linebreaks }}</p>
 		</div>
+		<div>
+			{% include 'blog/like_post.html' %}
+		</div>
 		
 	</div>
 	
