--- a/blog/templates/blog/like_post.html
+++ b/blog/templates/blog/like_post.html
@@ -4,7 +4,7 @@
 	  <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
 	</svg>
 	</a>
-	<span><small class="ml-2">{{ post.like.count }}</small></span>
+	<a href="#likeModalLong" data-toggle="modal" data-target="#likeModalLong" style="color: #3b3b3b"><span><small class="ml-2">{{ post.like.count }} like{{ post.like.count | pluralize }}</small></span></a>
 	
 {% else %}
 	<a href="{% url 'like-post' post.slug %}" style="text-decoration: none !important;">
@@ -12,6 +12,24 @@
 		  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
 		</svg> 
 	</a>
-	<span><small class="ml-2">{{ post.like.count }}</small></span>
+	<a href="#likeModalLong" data-toggle="modal" data-target="#likeModalLong" style="color: #3b3b3b"><span><small class="ml-2">{{ post.like.count }} like{{ post.like.count | pluralize }}</small></span></a>
 	
 {% endif %}
+
+<div class="modal fade" id="likeModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">People who Liked this post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {% for user in post.like.all %}
+  			{% include 'blog/list_user.html' %}
+	  	{% endfor %}
+      </div>
+    </div>
+  </div>
+</div>
