--- a/blog/templates/blog/like_post.html
+++ b/blog/templates/blog/like_post.html
@@ -14,9 +14,6 @@
 
 <a href="#likeModalLong" data-toggle="modal" data-target="#likeModalLong" style="color: #3b3b3b"><span><small class="ml-2">{{ post.like.count }} like{{ post.like.count | pluralize }}</small></span></a>
 
-<a href="#deleteModalCenter" data-toggle="modal" data-target="#deleteModalCenter" 
-class="float-right" style="color: #3b3b3b"><small>delete</small></a>
-
 <div class="modal fade" id="likeModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -35,25 +32,32 @@ class="float-right" style="color: #3b3b3b"><small>delete</small></a>
   </div>
 </div>
 
+{% if post.author == request.user %}
 
-<div class="modal fade" id="deleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Delete post?</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Are you sure want to delete the post - <strong>{{ post.title }}</strong>?
-      </div>
-      <div class="modal-footer">
-      	<button type="button" class="btn btn-success btn-sm" data-dismiss="modal">Cancel</button>
-        <form action="{% url 'delete-post' post.slug %}">
-			<button type="submit" class="btn btn-danger btn-sm">Delete</button>
-		</form>
-      </div>
-    </div>
-  </div>
-</div>
+	<a href="#deleteModalCenter" data-toggle="modal" data-target="#deleteModalCenter" 
+	class="float-right" style="color: #3b3b3b"><small>delete</small></a>
+
+
+	<div class="modal fade" id="deleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	  <div class="modal-dialog modal-dialog-centered" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLongTitle">Delete post?</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	        Are you sure want to delete the post - <strong>{{ post.title }}</strong>?
+	      </div>
+	      <div class="modal-footer">
+	      	<button type="button" class="btn btn-success btn-sm" data-dismiss="modal">Cancel</button>
+	        <form action="{% url 'delete-post' post.slug %}">
+				<button type="submit" class="btn btn-danger btn-sm">Delete</button>
+			</form>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	
+{% endif %}
