Reusable html template for post detail page

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,7 +21,7 @@
 			<p>{{ post.content | linebreaks }}</p>
 		</div>
 		<div>
-			{% include 'blog/like_post.html' %}
+			{% include 'blog/post_util.html' %}
 		</div>
 	</div>
 
