--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -8,7 +8,7 @@
 		{{ edit_form | crispy }}
 	</fieldset>
 	<div class="form-group">
-		<button class="btn btn-outline-dark" type="submit">Update</button>
+		<button class="btn btn-outline-dark" type="submit">Edit Post</button>
 	</div>
 </form>
 
