--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -54,6 +54,13 @@
           <div class="col-sm-2">
           </div>
           <div class="col-md-8">
+            {% if messages %}
+              {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+              {% endfor %}
+            {% endif %}
             {% block content %}{% endblock %}
           </div>
           <div class="col-sm-2">
