Implemented Ajax for Like button

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,33 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/base.css' %}">
 
     <title>My Blog!!</title>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
+
+    <script type="text/javascript">
+      $(document).ready(function(event){
+        $(document).on('click', '#like', function(event){
+          event.preventDefault();
+          var slug = $(this).attr('value');
+          
+          var url = "{% url 'like-post' 12345 %}".replace(/12345/, slug.toString());
+         
+                  $.ajax({
+                      type : 'POST',
+                      url : url,
+                      data : {'slug' : slug, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, 
+                      dataType : 'json',
+                      success : function(response){
+                        $(".post-footer").load(" .post-footer")
+                      },
+                      error : function(rs, e){
+                        alert('You canot like your own post!')
+                      },
+                  });
+              });
+          });
+      </script>
   </head>
   <body>
     <header class="blog-header">
@@ -68,7 +95,7 @@
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
