--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,7 +20,7 @@
 		<div class="blog-content text-muted">
 			<p>{{ post.content | linebreaks }}</p>
 		</div>
-		<div>
+		<div class="post-footer">
 			{% include 'blog/post_util.html' %}
 		</div>
 	</div>
