--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,6 +17,25 @@
 		<div class="blog-content text-muted">
 			<p style="height: 4.5rem; line-height: 1.5rem; overflow: hidden;">{{ post.content }}</p>
 			<a href="{% url 'post-detail' post.slug %}">Read more</a>
+			<a href="#likeModalLong" data-toggle="modal" data-target="#likeModalLong" style="color: #3b3b3b"><span><small class="ml-2 float-right">{{ post.like.count }} like{{ post.like.count | pluralize }}</small></span></a>
+
+			<div class="modal fade" id="likeModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <h5 class="modal-title" id="exampleModalLongTitle">People who Liked this post</h5>
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			          <span aria-hidden="true">&times;</span>
+			        </button>
+			      </div>
+			      <div class="modal-body">
+			        {% for user in post.like.all %}
+			  			{% include 'blog/list_user.html' %}
+				  	{% endfor %}
+			      </div>
+			    </div>
+			  </div>
+			</div>
 		</div>
 
 	</div>
