--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -26,7 +26,7 @@
 	    <a class="nav-link" id="pills-following-tab" data-toggle="pill" href="#pills-following" role="tab" aria-controls="pills-following" aria-selected="false">Following</a>
 	  </li>
 	  <li class="nav-item">
-	    <a class="nav-link" id="pills-likes-tab" data-toggle="pill" href="#pills-likes" role="tab" aria-controls="pills-likes" aria-selected="false">Likes</a>
+	    <a class="nav-link" id="pills-likes-tab" data-toggle="pill" href="#pills-likes" role="tab" aria-controls="pills-likes" aria-selected="false">Likes ({{ like_count }})</a>
 	  </li>
 	</ul>
 	<div class="tab-content" id="pills-tabContent">
