--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -31,11 +31,17 @@
 	</ul>
 	<div class="tab-content" id="pills-tabContent">
 	  <div class="tab-pane fade show active" id="pills-posts" role="tabpanel" aria-labelledby="pills-posts-tab">
-	  	{% include 'blog/post_list.html' %}
+	  	{% for post in posts %}
+	  		{% include 'blog/post_list.html' %}
+	  	{% endfor %}
 	  </div>
 	  <div class="tab-pane fade" id="pills-followers" role="tabpanel" aria-labelledby="pills-followers-tab">Followers</div>
 	  <div class="tab-pane fade" id="pills-following" role="tabpanel" aria-labelledby="pills-following-tab">Following</div>
-	  <div class="tab-pane fade" id="pills-likes" role="tabpanel" aria-labelledby="pills-likes-tab">Likes</div>
+	  <div class="tab-pane fade" id="pills-likes" role="tabpanel" aria-labelledby="pills-likes-tab">
+	  	{% for post in author_top_posts %}
+	  		{% include 'blog/post_list.html' %}
+	  	{% endfor %}
+	  </div>
 	</div>
 {% endblock content %}
 
