Restriction on like button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,9 +20,11 @@
 		<div class="blog-content text-muted">
 			<p>{{ post.content | linebreaks }}</p>
 		</div>
-		<div class="post-footer">
-			{% include 'blog/post_util.html' %}
-		</div>
+		{% if request.user.is_authenticated %}
+			<div class="post-footer">
+				{% include 'blog/post_util.html' %}
+			</div>
+		{% endif %}
 	</div>
 
 {% endblock content %}
