--- a/users/templates/users/my_bookmarks.html
+++ b/users/templates/users/my_bookmarks.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 	<legend class="border-bottom mb-4">Bookmarks</legend>
-	{% include 'blog/post_list.html' %}
+	{% for post in posts %}
+		{% include 'blog/post_list.html' %}
+	{% endfor %}
 
 {% endblock content %}
