--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,10 +5,19 @@
 		{% include 'users/base_profile.html' %}
 		
 		{% if request.user != profile.user %}
-			<button class="btn btn-outline-dark" type="submit">Follow</button>
+			{% if is_follow %}
+				<form action="{% url 'follow-profile' profile.user.username %}">
+					<button class="btn btn-outline-dark btn-sm" type="submit">Following</button>
+				</form>
+			{% else %}
+				<form action="{% url 'follow-profile' profile.user.username %}">
+					<button class="btn btn-outline-dark btn-sm" type="submit">Follow</button>
+				</form>
+			{% endif %}
+
 		{% else %}
 			<form action="{% url 'edit-profile' %}">
-				<button class="btn btn-outline-dark float-right" type="submit">Edit profile</button>
+				<button class="btn btn-outline-dark float-right btn-sm" type="submit">Edit profile</button>
 			</form>
 		{% endif %}
 		
