--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,11 +3,11 @@
 {% block content %}
 	<div class="blog-section mb-3">
 		{% include 'users/base_profile.html' %}
-		<div class="profile-follow">
-			{% include 'users/profile_util.html' %}
-		</div>
-		<br>
-		<br>
+		{% if request.user.is_authenticated %}
+			<div class="profile-follow">
+				{% include 'users/profile_util.html' %}
+			</div>
+		{% endif %}
 	</div>
 	<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 	  <li class="nav-item">
