Ajax refreshes whole profile page after clicking follow button

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -49,7 +49,7 @@
                   data : {'username' : username, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, 
                   dataType : 'json',
                   success : function(response){
-                    $(".profile-follow").load(" .profile-follow")
+                    $(".profile-page").load(" .profile-page")
                   },
                   error : function(rs, e){
 
