--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -79,6 +79,7 @@
 
               <a class="nav-item nav-link " href="{% url 'new-post' %}">New post</a>
               <a class="nav-item nav-link " href="{% url 'top-posts' %}">Top posts</a>
+              <a class="nav-item nav-link " href="{% url 'top-authors' %}">Top authors</a>
               <a class="nav-item nav-link " href="{% url 'bookmarks' %}">Bookmark</a>
               <a class="nav-item nav-link " href="{% url 'profile' request.user %}">Profile</a>
               <a class="nav-item nav-link " href="{% url 'logout' %}">Logout</a>
