Added dynamic title for all the pages

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,11 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'blog/base.css' %}">
 
-    <title>My Blog!!</title>
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>Blog!</title>
+    {% endif %}
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
