--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -15,10 +15,10 @@
           </div>
           <hr>
           <div class="blog-title">
-            <h5><a href="{% url 'post-detail' post.slug %}" style="color: #3b3b3b">{{ post.title | highlight_search:search_word }}</a></h5>
+            <h5><a href="{% url 'post-detail' post.slug %}" style="color: #3b3b3b">{{ post.title | safe | highlight_search:search_word }}</a></h5>
           </div>
           <div class="blog-content text-muted">
-            <p style="height: 4.5rem; line-height: 1.5rem; overflow: hidden;">{{ post.content | highlight_search:search_word }}</p>
+            <p style="height: 4.5rem; line-height: 1.5rem; overflow: hidden;">{{ post.content | safe | highlight_search:search_word }}</p>
             <a href="{% url 'post-detail' post.slug %}">Read more</a>
             <span><small class="ml-2 float-right">{{ post.like.count }} like{{ post.like.count | pluralize }}</small></span>
           </div>
