--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -75,14 +75,6 @@
 				<div class="collapse navbar-collapse" id="navbarToggle">
 		        <div class="navbar-nav mr-auto">
 		          <a class="nav-item nav-link " href="{% url 'home' %}">Home</a>
-		          <form method="GET" action="{% url 'search' %}" class="form-inline">
-                {% csrf_token %}
-                <input name="user_search_input" value="{{ request.GET.user_search_input }}" class="form-control mr-sm-2" type="search" placeholder="Search Posts..." aria-label="Search">
-                <button class="btn btn-outline-info mb-4 my-2 my-sm-0" type="submit">Search </button>
-              </form>
-		        </div>
-		        <!-- Navbar Right Side -->
-		        <div class="navbar-nav">
               {% if user.is_authenticated %}
 
               <a class="nav-item nav-link " href="{% url 'new-post' %}">New post</a>
@@ -98,6 +90,15 @@
               <a class="nav-item nav-link " href="{% url 'register' %}">Register</a>
 
               {% endif %}
+		          
+		        </div>
+		        <!-- Navbar Right Side -->
+		        <div class="navbar-nav">
+              <form method="GET" action="{% url 'search' %}" class="form-inline">
+                {% csrf_token %}
+                <input name="user_search_input" value="{{ request.GET.user_search_input }}" class="form-control mr-sm-2" type="search" placeholder="Search Posts..." aria-label="Search">
+                <button class="btn btn-outline-light mb-4 my-2 my-sm-0" type="submit">Search </button>
+              </form>
 		        </div>
 	      		</div>
 			</div>
