--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -112,12 +112,7 @@
       
         <div class="row">
           <div class="col-sm d-none d-sm-block">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            {% include 'blog/left_sidebar.html' %}
           </div>
           <div class="col-md-8">
             {% if messages %}
