--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -85,6 +85,7 @@
               <a class="nav-item nav-link " href="{% url 'top-authors' %}">Top authors</a>
               <a class="nav-item nav-link " href="{% url 'bookmarks' %}">Bookmark</a>
               <a class="nav-item nav-link " href="{% url 'profile' request.user %}">Profile</a>
+              <a class="nav-item nav-link " href="{% url 'feedback' %}">Feedback</a>
               <a class="nav-item nav-link " href="{% url 'logout' %}">Logout</a>
 
               {% else %}
