--- a/blog/templates/blog/left_sidebar.html
+++ b/blog/templates/blog/left_sidebar.html
@@ -5,6 +5,7 @@
 		  <a href="{% url 'top-authors' %}">Top authors</a><br><hr>
 		  <a href="{% url 'bookmarks' %}">Bookmark</a><br><hr>
 		  <a href="{% url 'profile' request.user %}">Profile</a><br><hr>
+		  <a href="{% url 'feedback' %}">Feedback</a><br><hr>
 		  <a href="{% url 'logout' %}">Logout</a><br><hr>
 	</div>
 
